fix/contraste

--- a/style.css
+++ b/style.css
@@ -792,7 +792,7 @@ h4 {
 }
 
 .tc-white {
-    color: black !important;
+    color: yellow !important;
 }
 
 .btn-atomic-tangerine {
